Address code review feedback: improve null safety
Co-authored-by: AronnoDIU <20730108+AronnoDIU@users.noreply.github.com>